# bom-solar-webservice

./: .gitignore  Changelog.md  Description.md  LICENSE  README.md  Setup.hs  bom-solar-webservice.cabal  make_package  stack.yaml
app/: Main.hs
config/: bom-solar-webservice.yaml
hnetcdf/: hnetcdf.cabal
