name:                bom-solar-webservice
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Axman6/bom-solar-webservice#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          axman6@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bom-solar-webservice
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bom-solar-webservice
                     , servant
                     , servant-server
                     , warp
                     , wai-cors
                     , servant-swagger
                     , swagger2
                     , text
                     , time
                     , hnetcdf
                     , either
                     , vector
                     , transformers
                     , mtl
                     , mmorph
                     , servant-cassava
                     , aeson
                     , cassava
                     , async
                     , lens
                     , unordered-containers
  default-language:    Haskell2010

test-suite bom-solar-webservice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bom-solar-webservice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Axman6/bom-solar-webservice
