name:                bom-solar-webservice
version:             0.1.0.3
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Axman6/bom-solar-webservice#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Alex Mason
maintainer:          alex.mason@data61.csiro.au
copyright:           2016 National ICT Australia (NICTA)
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.22
extra-source-files:  Description.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bom-solar-webservice
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:      PkgInfo_bom_solar_webservice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bom-solar-webservice
                     , servant
                     , servant-server
                     , warp
                     , wai
                     , wai-cors
                     , wai-extra
                     , servant-swagger
                     , swagger2
                     , text
                     , time
                     , hnetcdf
                     , either
                     , vector
                     , transformers
                     , mtl
                     , mmorph
                     , servant-cassava
                     , aeson
                     , cassava
                     , async
                     , lens
                     , unordered-containers
                     , data-default
                     , configuration-tools >= 0.2.14 && < 0.3
                     , heredoc
  default-language:    Haskell2010

test-suite bom-solar-webservice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bom-solar-webservice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Axman6/bom-solar-webservice
